Removed Scripts.js
Transferred functions from scripts.js to main.
-Has Bugs (Tabs doesnt work index)

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <title>Vite App</title>
   </head>
   <body>
-      <header class="header">
+      <header class="header" id="app">
         <img src="./assets/images/logo.png" alt="">
         <div class="header__list">
           <ul>
@@ -117,6 +117,5 @@
         </div>
       </main>
     <script type="module" src="./src/main.js"></script>
-    <script type="module" src="./src/scripts.js"></script>
   </body>
 </html>
