--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Vite App</title>
   </head>
   <body>
-      <header class="header">
+      <header class="header" id="app">
         <img src="./assets/images/logo.png" alt="">
         <div class="header__list">
           <ul>
@@ -46,7 +46,6 @@
                 <h1>embark on a</h1>
                 <h1 class="hero__changing" id="changingText">delightful</h1>
                 <h1>experience</h1>    
-                <script src="./src/scripts.js"></script>
               </div>
               <p>Experience the extraordinary: Where moments become memories,  <br> join us for an unforgettable journey at Event Flows Bangkok</p>
               <a href="#" class="button">Get Started</a>
@@ -92,7 +91,12 @@
             </div>
           </div>
           <div id="tab2" class="tab-content" style="display:none">
-
+            <img src="./assets/images/service_tradeshow.jpg" alt="">
+            <div class="tab-content-info">
+              <h3>THIS IS A TEST</h3>
+              <p>We can participate in these events to promote their products or services, engage with potential customers, and create leads.</p>
+              <a href="#" class="button" style="background-color: var(--clr-background);">Read More</a>
+            </div>
           </div>
           <div id="tab3" class="tab-content" style="display:none">
 
