--- a/test.html
+++ b/test.html
@@ -1,44 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://api.fontshare.com/v2/css?f[]=general-sans@500,600,400,700&display=swap" rel="stylesheet">
-    <title>Vite App</title>
-  </head>
-  <body>
-      <header class="header">
-        <img src="./assets/images/logo.png" alt="">
-        <div class="header__list">
-          <ul>
-            <li id="index">
-              <a href="index.html">Home</a>
-            </li>
-            <li id="rentals">
-              <a href="rentals.html">Rentals</a>
-            </li>
-            <li>
-              <a href="#entertainment">Entertainment</a>
-            </li>
-            <li>
-              <a href="#services">Services</a>
-            </li>
-            <li>
-              <a href="#portfolio">Portfolio</a>
-            </li>
-            <li>
-              <a href="#aboutus">About Us</a>
-            </li>
-            <li>
-              <a href="test.html" class="button">Contact Us</a>
-            </li>
-          </ul>
-
-
-        </div>
-      </header>
-    <script type="module" src="./src/main.js"></script>
-    <script type="module" src="./src/scripts.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <h1>test page</h1>
+</body>
 </html>
