--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap" rel="stylesheet">
-    <title>Vite App</title>
+    <title>Event Flows</title>
   </head>
   <body>
       <header class="header" id="app">
@@ -21,7 +21,7 @@
               <a href="index.html">Home</a>
             </li>
             <li>
-              <a href="#services">Services</a>
+              <a href="services.html">Services</a>
             </li>
             <li>
               <a href="#portfolio">Portfolio</a>
