--- a/services.html
+++ b/services.html
@@ -52,17 +52,16 @@
 
 
         <div class="services_wrapper section">
-          <div class="services_cards">
+          <a class="services_cards" href="./services_1.html">
             <div class="services_image">
               <img src="./assets/images/tradeshow_banner.png" alt="">
             </div>
-            
-
             <div class="services_cards_details">
               <h3>Trade Shows and Exhibitions</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae voluptatem non aperiam ut illum eveniet!</p>
             </div>
-          </div>
+          </a>
+
           <div class="services_cards">
             hello
           </div>
