--- a/about.html
+++ b/about.html
@@ -14,28 +14,28 @@
     <title>Vite App</title>
   </head>
   <body>
-      <header class="header" id="app">
-        <img src="./assets/images/logo.png" alt="">
-        <div class="header__list">
-          <ul>
-            <li id="index">
-              <a href="index.html">Home</a>
-            </li>
-            <li>
-              <a href="#services">Services</a>
-            </li>
-            <li>
-              <a href="#portfolio">Portfolio</a>
-            </li>
-            <li id="about">
-              <a href="about.html">About Us</a>
-            </li>
-            <li>
-              <a href="test.html" class="button">Contact Us</a>
-            </li>
-          </ul>
-        </div>
-      </header>
+    <header class="header" id="app">
+      <img src="./assets/images/logo.png" alt="">
+      <div class="header__list">
+        <ul>
+          <li id="index">
+            <a href="index.html">Home</a>
+          </li>
+          <li id="services">
+            <a href="services.html">Services</a>
+          </li>
+          <li id="portfolio">
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+          <li id="about">
+            <a href="about.html">About Us</a>
+          </li>
+          <li>
+            <a href="contact.html" class="button">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+    </header>
 
       <main>
         <div class="hero-about section">
