--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
           <!-- Tab links -->
           <div class="tab">
-            <button class="tablinks" onclick="openCity(event, 'TE')">Tradeshow and Exhibition</button>
+            <button class="tablinks active" onclick="openCity(event, 'TE')">Tradeshow and Exhibition</button>
             <button class="tablinks" onclick="openCity(event, 'CS')">Conference and Summit</button>
             <button class="tablinks" onclick="openCity(event, 'MC')">Music Festival and Concert</button>
             <button class="tablinks" onclick="openCity(event, 'CE')">Corporate Events</button>
@@ -91,7 +91,7 @@
             <div class="tabcontent-info">
               <h3>Trade Show and Exhibitions</h3>
               <p>We can participate in these events to promote their products or services, engage with potential customers, and create leads.</p>
-              <a href="#" class="button" style="background-color: var(--clr-background);">Read More</a>
+              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
             </div>
           </div>
 
@@ -218,6 +218,52 @@
         </div>
       </main>
 
+      <footer class="section">
+          <div class="footer_section_wrapper">
+            <div class="footer_section">
+              <div class="footer_img">
+                <img src="./assets/images/logo.png" alt="">
+              </div>
+              <h3>Event Flows Bangkok</h3>
+              <p>Experience the extraordinary</p>
+              <p>Moments become memories,
+                join us for an unforgettable journey at Event Flows Bangkok</p>
+            </div>
+            <div class="footer_section">
+              <h3>Menu</h3>
+              <ul>
+                <li>Home</li>
+                <li>Services</li>
+                <li>Portfolio</li>
+                <li>About Us</li>
+                <li>Contact Us</li>
+              </ul>
+            </div>
+            <div class="footer_section">
+              <h3>Services</h3>
+              <ul>
+                <li>Tradeshow and Exhibition</li>
+                <li>Conference and Summit</li>
+                <li>Music Festival and Concert</li>
+                <li>Corporate Events</li>
+                <li>Social and Cultural Events</li>
+                <li>Sporting</li>
+                <li>Wedding and Celebration</li>
+              </ul>
+            </div>
+
+            <div class="footer_section">
+              <h3>Contact us</h3>
+              <ul>
+                <li>facebook.com/eventflows</li>
+                <li>Telegram : 123</li>
+                <li>Telegram : 123</li>
+                <li>Telegram : 123</li>
+                <li>Telegram : 123</li>
+              </ul>
+            </div>
+          </div>
+      </footer>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
