--- a/services.html
+++ b/services.html
@@ -58,25 +58,70 @@
             </div>
             <div class="services_cards_details">
               <h3>Trade Shows and Exhibitions</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur provident quos suscipit cum inventore, atque itaque quo. Sit, modi! Cumque animi delectus cum sed impedit sunt quae, quos porro ipsam, nihil voluptates voluptatem similique incidunt obcaecati pariatur. Non, debitis eligendi!</p>
+            </div>
+          </a>
+
+          <a class="services_cards" href="./services_1.html">
+            <div class="services_image">
+              <img src="./assets/images/tradeshow_banner.png" alt="">
+            </div>
+            <div class="services_cards_details">
+              <h3>Conference and Summit</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae voluptatem non aperiam ut illum eveniet!</p>
             </div>
           </a>
 
-          <div class="services_cards">
-            hello
-          </div>
-          <div class="services_cards">
-            hello
-          </div>
-          <div class="services_cards">
-            hello
-          </div>
-          <div class="services_cards">
-            hello
-          </div>
-          <div class="services_cards">
-            hello
-          </div>
+          <a class="services_cards" href="./services_1.html">
+            <div class="services_image">
+              <img src="./assets/images/tradeshow_banner.png" alt="">
+            </div>
+            <div class="services_cards_details">
+              <h3>Music Festival and Concert</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae voluptatem non aperiam ut illum eveniet!</p>
+            </div>
+          </a>
+
+          <a class="services_cards" href="./services_1.html">
+            <div class="services_image">
+              <img src="./assets/images/tradeshow_banner.png" alt="">
+            </div>
+            <div class="services_cards_details">
+              <h3>Corporate Events</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae voluptatem non aperiam ut illum eveniet!</p>
+            </div>
+          </a>
+
+          <a class="services_cards" href="./services_1.html">
+            <div class="services_image">
+              <img src="./assets/images/tradeshow_banner.png" alt="">
+            </div>
+            <div class="services_cards_details">
+              <h3>Social and Cultural</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae voluptatem non aperiam ut illum eveniet!</p>
+            </div>
+          </a>
+
+          <a class="services_cards" href="./services_1.html">
+            <div class="services_image">
+              <img src="./assets/images/tradeshow_banner.png" alt="">
+            </div>
+            <div class="services_cards_details">
+              <h3>Sporting Events</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae voluptatem non aperiam ut illum eveniet!</p>
+            </div>
+          </a>
+
+          <a class="services_cards" href="./services_1.html">
+            <div class="services_image">
+              <img src="./assets/images/tradeshow_banner.png" alt="">
+            </div>
+            <div class="services_cards_details">
+              <h3>Wedding and Celebration</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae voluptatem non aperiam ut illum eveniet!</p>
+            </div>
+          </a>
+
         </div>
       </main>
     <script type="module" src="./src/main.js"></script>
