--- a/services_1.html
+++ b/services_1.html
@@ -60,7 +60,7 @@
           </div>
 
           <div class="book_now_wrapper">
-            <a href="" class="button" style="background-color: var(--clr-background);">Book Now!</a>
+            <a href="contact.html" class="button" style="background-color: var(--clr-background);">Book Now!</a>
           </div>
 
           <div class="book_other_details_wrapper">
