--- a/services.html
+++ b/services.html
@@ -58,7 +58,7 @@
             </div>
             <div class="services_cards_details">
               <h3>Trade Shows and Exhibitions</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur provident quos suscipit cum inventore, atque itaque quo. Sit, modi! Cumque animi delectus cum sed impedit sunt quae, quos porro ipsam, nihil voluptates voluptatem similique incidunt obcaecati pariatur. Non, debitis eligendi!</p>
+              <p>lorem40</p>
             </div>
           </a>
 
