--- a/index.html
+++ b/index.html
@@ -54,9 +54,21 @@
       </header>
       <div class="header__menu" id="myLinks">
         <ul>
-          <li>1</li>
-          <li>2</li>
-          <li>3</li>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="services.html">Services</a>
+          </li>
+          <li>
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+          <li>
+            <a href="about.html">About Us</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact Us</a>
+          </li>
         </ul>
       </div>
       <main>
