--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </ul>
         </div>
         <div class="header__mobile">
-          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <a href="javascript:void(0);" class="header_icon icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           </a>
         </div>
