--- a/index.html
+++ b/index.html
@@ -187,41 +187,36 @@
             <p>Our team at Event Flow Bangkok understands the importance of creating a seamless and memorable event experience. We provide a broad variety of services to guarantee that every detail of your special occasion is taken care of.</p>
           </div>
 
-          <div class="event_cards_wrapper">
-            <div class="event_cards">
-              <img src="./assets/images/services_concert.jpg" alt="">
-              <div class="card_initial_title">
-                <h2>Tourism</h2>
+          <div class="services_wrapper">
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/tradeshow_banner.png" alt="">
               </div>
-              <div class="card_details">
-                <h3>Tourism</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
-                <a href="test.html" class="button events_read_more card_accent1">Read More</a>
+              <div class="services_cards_details">
+                <h3>Event 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos aut fuga, provident unde soluta voluptas numquam harum minima nihil laudantium?</p>
               </div>
-            </div>
+            </a>
 
-            <div class="event_cards">
-              <img src="./assets/images/services_conference.jpg" alt="">
-              <div class="card_initial_title">
-                <h2>Tourism</h2>
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/tradeshow_banner.png" alt="">
               </div>
-              <div class="card_details">
-                <h3>Tourism</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
-                <a href="test.html" class="button events_read_more card_accent2">Read More</a>
+              <div class="services_cards_details">
+                <h3>Event 2</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ipsam eveniet fugiat, rem error perspiciatis porro rerum. Harum officiis hic totam recusandae doloribus error quia dignissimos temporibus. Omnis voluptatibus qui perspiciatis? Atque, ut asperiores doloremque quasi dolor similique et consequatur.</p>
               </div>
-            </div>
-            <div class="event_cards">
-              <img src="./assets/images/services_sporting.jpg" alt="">
-              <div class="card_initial_title">
-                <h2>Tourism</h2>
+            </a>
+
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/tradeshow_banner.png" alt="">
               </div>
-              <div class="card_details">
-                <h3>Tourism</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
-                <a href="test.html" class="button events_read_more card_accent3">Read More</a>
+              <div class="services_cards_details">
+                <h3>Event 3</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, aliquid.</p>
               </div>
-            </div>
+            </a>
           </div>
         </div>
 
@@ -253,7 +248,7 @@
         </div>
       </main>
 
-      <footer class="section">
+      <footer>
           <div class="footer_section_wrapper">
             <div class="footer_section">
               <div class="footer_img">
