--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <h1>experience</h1>    
               </div>
               <p>Experience the extraordinary: Where moments become memories,  <br> join us for an unforgettable journey at Event Flows Bangkok</p>
-              <a href='services.html' class="button">Get Started</a>
+              <a href='services.html' class="hero_get_started button">Get Started</a>
             </div>
             <img src="./assets/images/hero_image.png" alt="">
           </div>
