--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <button class="tablinks" onclick="openCity(event, 'MC')">Music Festival and Concert</button>
             <button class="tablinks" onclick="openCity(event, 'CE')">Corporate Events</button>
             <button class="tablinks" onclick="openCity(event, 'SC')">Social and Cultural</button>
-            <button class="tablinks" onclick="openCity(event, 'SS')">Sporting</button>
+            <button class="tablinks" onclick="openCity(event, 'SS')">Sporting Events</button>
             <button class="tablinks" onclick="openCity(event, 'WC')">Wedding and Celebration</button>
           </div>
 
