--- a/index.html
+++ b/index.html
@@ -245,30 +245,21 @@
               <img src="./assets/images/partners/menshealth.svg" alt="" srcset="">
               <img src="./assets/images/partners/mrbeast.svg" alt="">
             </div>
+          </div>
         </div>
+
       </main>
 
       <footer>
           <div class="footer_section_wrapper">
-            <div class="footer_section">
-              <div class="footer_img">
-                <img src="./assets/images/logo.png" alt="">
-              </div>
-              <h3>Event Flows Bangkok</h3>
-              <p>Experience the extraordinary</p>
-              <p>Moments become memories,
-                join us for an unforgettable journey at Event Flows Bangkok</p>
+            <div class="footer_section footer_heading">
+              <h4>Event Flows Bangkok</h4>
+              <h2 style="color: var(--clr-accentred);">ART</h2>
+              <h2 style="color: var(--clr-accentblue);">EXP</h2>
+              <h2 style="color:var(--clr-yellow)">FUN</h2>
+              <h4>Experience the extraordinary.</h4>
             </div>
-            <div class="footer_section">
-              <h3>Menu</h3>
-              <ul>
-                <li>Home</li>
-                <li>Services</li>
-                <li>Portfolio</li>
-                <li>About Us</li>
-                <li>Contact Us</li>
-              </ul>
-            </div>
+
             <div class="footer_section">
               <h3>Services</h3>
               <ul>
@@ -291,6 +282,23 @@
                 <li>Telegram : 123</li>
                 <li>Telegram : 123</li>
               </ul>
+            </div>
+
+            
+            <div class="footer_section">
+              <h3>Menu</h3>
+              <ul>
+                <li>Home</li>
+                <li>Services</li>
+                <li>Portfolio</li>
+                <li>About Us</li>
+                <li>Contact Us</li>
+              </ul>
+            </div>
+
+            <div class="footer_section newsletter">
+              <h3>Our Newsletter</h3>
+              <a href="" class="button">Signup</a>
             </div>
           </div>
       </footer>
