--- a/services.html
+++ b/services.html
@@ -124,6 +124,58 @@
 
         </div>
       </main>
+      <footer>
+        <div class="footer_section_wrapper">
+          <div class="footer_section footer_heading">
+            <h4>Event Flows Bangkok</h4>
+            <h2 style="color: var(--clr-accentred);">ART</h2>
+            <h2 style="color: var(--clr-accentblue);">EXP</h2>
+            <h2 style="color:var(--clr-yellow)">FUN</h2>
+            <h4>Experience the extraordinary.</h4>
+          </div>
+
+          <div class="footer_section">
+            <h3>Services</h3>
+            <ul>
+              <li>Tradeshow and Exhibition</li>
+              <li>Conference and Summit</li>
+              <li>Music Festival and Concert</li>
+              <li>Corporate Events</li>
+              <li>Social and Cultural Events</li>
+              <li>Sporting</li>
+              <li>Wedding and Celebration</li>
+            </ul>
+          </div>
+
+          <div class="footer_section">
+            <h3>Contact us</h3>
+            <ul>
+              <li>facebook.com/eventflows</li>
+              <li>Telegram : 123</li>
+              <li>Telegram : 123</li>
+              <li>Telegram : 123</li>
+              <li>Telegram : 123</li>
+            </ul>
+          </div>
+
+          
+          <div class="footer_section">
+            <h3>Menu</h3>
+            <ul>
+              <li>Home</li>
+              <li>Services</li>
+              <li>Portfolio</li>
+              <li>About Us</li>
+              <li>Contact Us</li>
+            </ul>
+          </div>
+
+          <div class="footer_section newsletter">
+            <h3>Our Newsletter</h3>
+            <a href="" class="button">Signup</a>
+          </div>
+        </div>
+    </footer>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
