--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap" rel="stylesheet">
-    <title>Event Flows - Services</title>
+    <title>Event Flows - Contact us</title>
   </head>
   <body>
       <header class="header" id="app">
