Images and Description

--- a/services_1.html
+++ b/services_1.html
@@ -44,13 +44,15 @@
               <h2>trade shows and <span>exhibitions.</span></h2>
             </div>
             <p>
-              We're a dedicated team of experienced professionals passionate about crafting unforgettable event experiences. As a go-to event management company, we collaborate closely with clients to tailor our services to their unique needs and goals. Our attention to detail and commitment to quality set us apart, ensuring flawless execution from idea creation to on-site delivery. 
+              Our Event Flow team collaborates closely with a team to create full event planning, including floor plans, booth layouts, and activity scheduling. We also work with exhibitors to understand their objectives and goals and guide and support them throughout the preparation process. Our staff supervises onsite operations during the trade show, including booth registration, setup, teardown, speaker or entertainment arrangements, and addressing any difficulties that may arise. They also monitor guest comments and analyze the event's progress to improve future events.            
+            </p>
+            <br>
+            <p>
+              Our team is also adaptive, as trade fairs frequently require quick problem-solving and adaptability in a fast-paced setting.  
             </p>
           </div>
-          <div class="inner_services_carousel">
-            <div class="isc_image">
-              <img src="./assets/images/service_tradeshow.jpg" alt="">
-            </div>
+          <div class="isc_image">
+            <img src="./assets/images/services/trade.jpg" alt="">
           </div>
         </div>
 
@@ -91,31 +93,78 @@
           </div>
 
           <div class="services_wrapper">
-            <a class="services_cards" href="./services_1.html">
+            <a class="services_cards" href="./services_2.html">
               <div class="services_image">
-                <img src="./assets/images/tradeshow_banner.png" alt="">
+                <img src="./assets/images/services/conference.jpg" alt="">
               </div>
               <div class="services_cards_details">
-                <h3>Trade Shows and Exhibitions</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae voluptatem non aperiam ut illum eveniet!</p>
+                <h3>Conference and Summit</h3>
               </div>
             </a>
   
-            <div class="services_cards">
-              hello
-            </div>
-            <div class="services_cards">
-              hello
-            </div>
-            <div class="services_cards">
-              hello
-            </div>
-            <div class="services_cards">
-              hello
-            </div>
-            <div class="services_cards">
-              hello
-            </div>
+            <a class="services_cards" href="./services_3.html">
+              <div class="services_image">
+                <img src="./assets/images/services/music.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Music Festival and Concert</h3>
+              </div>
+            </a>
+  
+            <a class="services_cards" href="./services_4.html">
+              <div class="services_image">
+                <img src="./assets/images/services/corporate.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Corporate Events</h3>
+              </div>
+            </a>
+  
+            <a class="services_cards" href="./services_5.html">
+              <div class="services_image">
+                <img src="./assets/images/services/cultural.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Cultural Events</h3>
+              </div>
+            </a>
+  
+            <a class="services_cards" href="./services_6.html">
+              <div class="services_image">
+                <img src="./assets/images/services/sport.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Sporting Events</h3>
+              </div>
+            </a>
+  
+            <a class="services_cards" href="./services_7.html">
+              <div class="services_image">
+                <img src="./assets/images/services/wedding.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Wedding and Celebration</h3>
+              </div>
+            </a>
+  
+            <a class="services_cards" href="./services_8.html">
+              <div class="services_image">
+                <img src="./assets/images/services/concierge.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Personal Concierge</h3>
+              </div>
+            </a>
+  
+            <a class="services_cards" href="./services_9.html">
+              <div class="services_image">
+                <img src="./assets/images/services/event.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Event Venue</h3>
+              </div>
+            </a>
+  
           </div>
         </div>
       </main>
